--- a/index.html
+++ b/index.html
@@ -1438,6 +1438,15 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 mb-4">
+                                <h6>2025年6月15日</h6>
+                                <ul>
+                                    <li>添加牛卡与经验buff的经验加成</li>
+                                    <li>添加战斗buff的掉落数量加成</li>
+                                    <li>修复技能等级小数部分不计算的问题</li>
+                                    <li>修复重复掉落物掉落事件被覆盖的问题</li>
+                                </ul>
+                            </div>
+                            <div class="col-12 mb-4">
                                 <h6>2025年5月28日</h6>
                                 <ul>
                                     <li>修复攻击间隔计算异常的问题</li>
