--- a/index.html
+++ b/index.html
@@ -1438,6 +1438,13 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 mb-4">
+                                <h6>2025年6月26日</h6>
+                                <ul>
+                                    <li>将玩家dps计算的算法改为(玩家总计伤害/(模拟战斗总时长-等待波次刷新时长))</li>
+                                    <li>添加玩家实际死亡数显示</li>
+                                </ul>
+                            </div>
+                            <div class="col-12 mb-4">
                                 <h6>2025年6月15日</h6>
                                 <ul>
                                     <li>添加牛卡与经验buff的经验加成</li>
