--- a/index.html
+++ b/index.html
@@ -1494,6 +1494,13 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 mb-4">
+                                <h6>2025年7月10日</h6>
+                                <ul>
+                                    <li>修复贯穿会反复贯穿同一个玩家</li>
+                                    <li>添加地牢嗝屁日志显示</li>
+                                </ul>
+                            </div>
+                            <div class="col-12 mb-4">
                                 <h6>2025年6月26日</h6>
                                 <ul>
                                     <li>将玩家dps计算的算法改为(玩家总计伤害/(模拟战斗总时长-等待波次刷新时长))</li>
